# Coding-Examples

./: README  cin1.cpp  gfortQp.f90
FP_instr/fmla/: README  fma2.s  test.s  test2.s  test3.s
FP_instr/neon/: README.peak_4x
GameOfLife/: serialGOL.f90
PAPI/: PAPI_FP_OPS_.no_read.F90  build.sh  fpapi.h  ins_cyc_test.F90  ins_cyc_test.no_read.F90  l1_dcm_test.F90  l1_dcm_test.no_read.F90  matmult.F90  test.F90  test.f90  test1.c
Rouson_examples/: README.txt
Rouson_examples/buildScripts/: gnu-compilers-cmake.sh  nag-compilers-cmake.sh
Rouson_examples/ssdSource/: CMakeLists.txt
Rouson_examples/ssdSource/chapter01/figure1.4/: Makefile  main.F90
Rouson_examples/ssdSource/chapter02/figure2.4/: CMakeLists.txt  gfortran_oo_hello_world.F90  oo_hello_world.F90
Rouson_examples/ssdSource/chapter03/: CMakeLists.txt  Makefile  field.F90  integrable_conductor.F90
Rouson_examples/ssdSource/chapter04/: CMakeLists.txt  astronaut.F90  main.F90
Rouson_examples/ssdSource/chapter05/hermetic/: main.F90  vortex.F90
Rouson_examples/ssdSource/chapter06/: CMakeLists.txt
Rouson_examples/ssdSource/chapter06/common_cpp/: Ref.h
Rouson_examples/ssdSource/chapter06/fortran_abstract_calculus/: CMakeLists.txt
Rouson_examples/ssdSource/chapter06/semidiscrete_cpp/: main.cpp
Rouson_examples/ssdSource/chapter07/: CMakeLists.txt
Rouson_examples/ssdSource/chapter07/strategy_surrogate_f2003/: Makefile  main.F90  runge_kutta_2nd.F90
Rouson_examples/ssdSource/chapter08/: CMakeLists.txt
Rouson_examples/ssdSource/chapter08/puppeteer_f2003/: main.F90
Rouson_examples/ssdSource/chapter09/: CMakeLists.txt
Rouson_examples/ssdSource/chapter09/burgers_factory_f2003/: Makefile  field.F90  main.F90  periodic_6th_order.F90
Rouson_examples/ssdSource/chapter12/burgers_caf_v4/: Makefile  main.F90  periodic_2nd_order.F90
appleScripts/: findCalender.scpt  findKids.inCaledar.scpt
codingTests/: testIndex.f90
codingTests/CMake/: CMakeLists.txt
codingTests/CMake/build-test/: runCmake.sh
codingTests/Mpi_stuff/: Sample_mpio  Sample_mpio.f90  coreId.c  cpuNum.txt  doMpiAllReduce.sh  fluxsubmit.sh  hello1  hello1.f90  llnl_mpi_mm.cpp  mpiAllReduce.cc  mpiErrorEx.cc  mpiRank.c  mpiRankProc.f90  mpiRank_steps.sh  mpi_allreduce.c  mpi_array.f  mpi_script.bad.sh  mpi_thread_support.c  mycpu.c  omp_hello.f90  ping.f90  scriptPrintsPID.sh  step1.PID.sh  step1_mpiRank.sh  step2.PID.sh  step2_mpiRank.sh  steps.PID.sh
codingTests/cCodes/: alive1  alive1.c  string.c  string_pass_func.c  string_ptr.c  threeTimeLoops.c
codingTests/cplusplus/: File.txt  SConstruct  analyzeVecOut.py  build.py  build.sh  buildIntel_boost_1_55_0_stampede.sh  buildIntel_boost_1_55_0_stampede.tau.sh  buildSimpleClassOneLinePdt.sh  buildSimpleClassPdt.sh  filewrite  filewrite.cpp  g++Build.sh  ifDefines.cpp  matrix4x4trans.cpp  parseVecOut.py  run100.sh  showMaxVal.cpp  simpleClass.cpp  simpleClassOneLine.cpp  simpleStructVec.cpp  static.cpp  testBoostTimer.cpp  testPlatform.cc  testStructVec.cpp  testVec.cpp  testenv  testenv.cxx  wrt_out.txt
codingTests/fortran2003/: shape.f03  shapeprg.f03  testgetarg.f03
codingTests/fortran90/: .tags  Fortran_Kind_Module.f90  NumericModel.f90  allocTrick.f90  arrayAccess.f90  complex.f90  conftest.f  degree_trig.f90  driveTP.cpp  drvsort.f  flushing.f90  foobarbaz_mod.f90  hello  hello.f90  hello1  hello1.f90  iffing.f90  indexArrays.f90  intArray.f90  kindfind.f90  lenarray.f90  misMatchDim  misMatchDim.f90  modAndSub.f90  modAssign.f90  modulos.f90  nameIfLoop.f90  quick_sort1.f  sdot.f90  simple.f90  sort1.f  sorthalf.f  subInsub.f90  syntax.f90  test2.F90  test3.F  testBools.f90  testComment.F  testDsind.f90  testOrDefine.F90  (+10 more)
codingTests/gpuStuff/: Makefile  cudaTest.cu  cudaTest2.cu  fortest.f95  thrust1.cu  version.cu
codingTests/haskell/: hello.hs
codingTests/hdf5_stuff/: Makefile  README.txt  readh5dataset.f90  readh5dataset.mod  sample-file.h5  sample-file.out  sample-read  sample-read.f90
codingTests/ifort_tests/: lazyptr_test.f90
codingTests/intelTbb/: example1.cpp
codingTests/macOSx/lt1/: README  a.c  b.c  configure.ac  m.c
codingTests/makes/: Makefile
codingTests/matplotlibing/: anima1.py  griddata.py  interp2d.py  (+1 more)
compilerIssues/: component_type_mod.F90  shr_kind_mod.F90
configs/: openmpi_pgi_macosx_i5.sh
fortranAccociate/: t2.f90  test.cce.sh  testAssociate.f90
gitTools/: git-archive-all.sh
jumpingIntoC++/: calculator.cpp  for.cpp  getLine.cpp  incrementers1.cpp  myname.cpp  nonInit.cpp  non_negative.cpp  password.cpp  string_name.cpp  username_password.cpp  variable.cpp  waitForkey.cpp  while.cpp  whosolder.cpp
jupyter/: fillErrorAndMore.ipynb  full_venue_capacity_dict.json  interactivePlot.ipynb  phish_venue_analysis.ipynb  venue_capacity_dict.json
matplotlib/: 3d-bargraph.py  simple_barGraph.py
memoryAccess/: CMakeLists.txt  README  cMemoryOrder.c  fortranMemoryOrder.f  print_array_values.c
memoryUsage/: check_memory.c  check_memory_parallel.c  memory.c  memory.h  memory_parallel.c  memory_parallel.h  totVirtMem.cpp
mpiHip/: addVec.cpp
mpiOmp/: jacobi_mpiomp.f90
neon/: ifDefNeon.c  main_single_prec.c  neon_ex1.c  peak_4x.cc  testmultCplx.c
openMp/: ompTest.F90  testNestedOmp.F90  testNestedOmp.f90  testTaskLoop.f90
opencl_sample/: calc_radii_kernel.cl  newp3m.py  p3mgpu_test.py
performance/: callRdtsc.f  flopCount  queryPerform.f90  rdtsc.s  testtimers.f  timw.c  vpuGlfops.F90
pthreads/: phello_world.c
pythonTools/: checksum.py  libcfRegrid.py  licenseHunt.py  newClass.py  printTableNodes.py  testCompilerSpack.py  testH5128919.rho5.py  testLogging.py  testNewClass.py
scripting/: getOutputinVar.sh  git-version-gen.sh  loop2.sh  loop3.sh  nohup.out  nohuping.sh  searchList.sh  sequence.sh  tcDSRC.sh  writeloop.out  writeloop.sh
tbb/: README.txt  build.mac.sh  build.sh  build.tau.link.sh  build_and_run_knl.tbb_mm.tau.txt  enumbThreadSpec.cpp  func.build.mac.sh  global_control.cpp  matmul.cpp  mpi_tbb_mm.cpp  run.matmul.tau.sh  run.sh  run.tau.sh  simpleTbb.cpp  stampede.build.tau.link.sh  tbb_mm.cpp
testAvx/: testAvx.c
(+544 files in other folders)
